  (Jérémie Dimino)

- #8701, #8725: Variance of constrained parameters causes principality issues
  (Jacques Garrigue, report by Leo White, review by Gabriel Scherer)

- #8769, #8770: Fix assertion failure with -pack
  (Leo White, review by Gabriel Scherer, report by Fabian @copy)

- #8800: Fix soundness bug in extension constructor inclusion
  (Leo White, review by Jacques Garrigue)

OCaml 4.08.0
------------

### Language features:

- #1947: Introduce binding operators (let*, let+, and* etc.)
  (Leo White, review by Thomas Refis)

- #1892: Allow shadowing of items coming from an include
  (Thomas Refis, review by Gabriel Radanne)

- #2122: Introduce local substitutions in signatures: "type t := type_expr"
  and "module M := Extended(Module).Path"
  (Thomas Refis, with help and review from Leo White, and Alain Frisch)

- #1804: New notion of "alerts" that generalizes the deprecated warning
      [@@ocaml.alert deprecated "Please use bar instead!"]
      [@@ocaml.alert unsafe "Please use safe_foo instead!"]
  (Alain Frisch, review by Leo White and Damien Doligez)

- #6422, #7083, #305, #1568: Allow `exception` under or-patterns
  (Thomas Refis, with help and review from Alain Frisch, Gabriel Scherer, Jeremy
  Yallop, Leo White and Luc Maranget)


- #1705: Allow @@attributes on exception declarations.
  (Hugo Heuzard, review by Gabriel Radanne and Thomas Refis)

- #1506, #2147, #2166, #2167: Extended `open` to arbitrary module
  expression in structures and to applicative paths in signatures
  (Runhang Li, review by Alain Frisch, Florian Angeletti, Jeremy Yallop,
  Leo White and Thomas Refis)

* #2106: .~ is now a reserved keyword, and is no longer available
  for use in extended indexing operators
  (Jeremy Yallop, review by Gabriel Scherer, Florian Angeletti, and
   Damien Doligez)

* #7841, #2041, #2235: allow modules from include directories
  to shadow other ones, even in the toplevel; for a example, including